# simple-embedding-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  main.py  pyproject.toml  schemas.py  service.py  settings.toml
models/: factory.py  vectorizer.py
