[tool.poetry]
name = "simple-vectorizer"
version = "0.1.0"
description = ""
authors = ["Christopher Keibel <christopher.keibel.90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10, <3.12"
torch = "2.0.0"
sentence-transformers = "^3.1.1"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
dynaconf = "^3.2.6"
loguru = "^0.7.2"
numpy = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
